@@ -33,6 +33,7 @@ import org.jackhuang.hmcl.ui.FXUtils;
 import org.jackhuang.hmcl.util.FXThread;
 import org.jackhuang.hmcl.util.InvocationDispatcher;
 import org.jackhuang.hmcl.util.Lang;
+import org.jackhuang.hmcl.util.Pair;
 import org.jackhuang.hmcl.util.gson.JsonUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
 import org.jackhuang.hmcl.util.io.HttpRequest;
@@ -44,13 +45,15 @@ import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Map;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.CancellationException;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.LockSupport;
 
+import static org.jackhuang.hmcl.util.Pair.pair;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -310,11 +313,18 @@ public final class TerracottaManager {
     public static TerracottaState.HostScanning setScanning() {
         TerracottaState state = STATE_V.get();
         if (state instanceof TerracottaState.PortSpecific portSpecific) {
-            String uri = NetworkUtils.withQuery(String.format("http://127.0.0.1:%d/state/scanning", portSpecific.port), Map.of(
-                    "player", getPlayerName()
-            ));
+            Task.supplyAsync(Schedulers.io(), TerracottaNodeList::fetch)
+                    .thenComposeAsync(nodes -> {
+                        List<Pair<String, String>> query = new ArrayList<>(nodes.size() + 1);
+                        query.add(pair("player", getPlayerName()));
+                        for (URI node : nodes) {
+                            query.add(pair("public_nodes", node.toString()));
+                        }
+                        return new GetTask(NetworkUtils.withQuery(
+                                "http://127.0.0.1:%d/state/scanning".formatted(portSpecific.port), query
+                        )).setSignificance(Task.TaskSignificance.MINOR);
+                    }).start();
 
-            new GetTask(uri).setSignificance(Task.TaskSignificance.MINOR).start();
             return new TerracottaState.HostScanning(-1, -1, null);
         }
         return null;
@@ -323,15 +333,19 @@ public final class TerracottaManager {
     public static Task<TerracottaState.GuestConnecting> setGuesting(String room) {
         TerracottaState state = STATE_V.get();
         if (state instanceof TerracottaState.PortSpecific portSpecific) {
-            String uri = NetworkUtils.withQuery(String.format("http://127.0.0.1:%d/state/guesting", portSpecific.port), Map.of(
-                    "room", room,
-                    "player", getPlayerName()
-            ));
-
-            return new GetTask(uri)
-                    .setSignificance(Task.TaskSignificance.MINOR)
-                    .thenSupplyAsync(() -> new TerracottaState.GuestConnecting(-1, -1, null))
-                    .setSignificance(Task.TaskSignificance.MINOR);
+            return Task.supplyAsync(Schedulers.io(), TerracottaNodeList::fetch)
+                    .thenComposeAsync(nodes -> {
+                        ArrayList<Pair<String, String>> query = new ArrayList<>(nodes.size() + 2);
+                        query.add(pair("room", room));
+                        query.add(pair("player", getPlayerName()));
+                        for (URI node : nodes) {
+                            query.add(pair("public_nodes", node.toString()));
+                        }
+                        return new GetTask(NetworkUtils.withQuery("http://127.0.0.1:%d/state/guesting".formatted(portSpecific.port), query))
+                                .setSignificance(Task.TaskSignificance.MINOR)
+                                .thenSupplyAsync(() -> new TerracottaState.GuestConnecting(-1, -1, null))
+                                .setSignificance(Task.TaskSignificance.MINOR);
+                    });
         } else {
             return null;
         }
